bootstrap4 collapse fixed

--- a/flask-wa/src/static/css/style.css
+++ b/flask-wa/src/static/css/style.css
@@ -40,3 +40,7 @@ body {
   /*text-align: center;*/
   background:transparent;
 }
+
+.container {
+    padding-top: 10px;
+}
